# Subs_And_Export

./: .copilot-instructions  .coveragerc  .cursorrules  .dockerignore  .env.docker.example  .geminirules  .gitignore  .windsurfrules  AGENT.md  AGENTS.md  DEPLOY.md  Dockerfile  Makefile  NOTES  OPENAI_SETUP.md  README.md  SECURITY.md  app.py  backend-cloudbuild.yaml  conftest.py  debug_splitting.py  debug_wrapping.py  docker-compose.override.yml  docker-compose.yml  pom.xml  pyproject.toml  pytest.ini  requirements.txt  run_servers.sh  test_output_auth.txt  verify_prod_build.sh  verify_sidebar.py
.Jules/: cerberus.md  palette.md
.codex/: acceptance-flows.md  quality-gates.json  quality.mk
.jules/: bolt-video.md  bolt.md  palette.md  sentinel.md  sentinel_entry.md
.streamlit/: app_settings.toml  config.toml  secrets.example.toml
backend/: .coveragerc  Dockerfile  alembic.ini  benchmark.py  benchmark_util.py  cli.py  coverage.xml  debug_karaoke.py  diagnostic_ai.py  main.py  pytest.ini  requirements.mock.txt  requirements.txt
bridge-validation/: manual-review-2026-07-14.md
candidate-inspection-output/: ape_group_100049029.facts.txt  ape_group_100049029.json  condensed.json  hospital_group_99221950.facts.txt  hospital_group_99221950.json  hospital_group_99222000.facts.txt  hospital_group_99222000.json  hospital_group_99222005.facts.txt  hospital_group_99222005.json  inspection.json  modification_group_55291.facts.txt  modification_group_55291.json  subjects.tsv  summary.json
candidate-neighborhood-output/: neighborhoods.json  subjects.tsv
case-fetch-output/: case_api_compact.json  case_details.json
config/: app_settings.example.toml  secrets.example.toml
docs/: architecture.md  credits-usage.md  streamlit-archive.md
enriched-hunter-output/: coverage.json  measurable-signals.json  result.json  summary.txt  top-candidates.tsv
evidence-graph-v2-output/: diverse-results.tsv  evaluation.json  result.json
evidence-graph-v2b-output/: diverse-results.tsv  evaluation.json  result.json
evidence-graph-v2c-fast-output/: diverse-results.tsv  evaluation.json  result.json
frontend/: Dockerfile  README.md  cloudbuild.yaml  e2e_output.txt  e2e_output_v2.txt  e2e_output_v3.txt  e2e_output_v4.txt  e2e_output_v5.txt  e2e_output_v6.txt  e2e_output_v7.txt  final_e2e_output.txt  final_e2e_output_v2.txt  final_e2e_output_v3.txt  final_e2e_output_v4.txt  final_e2e_output_v5.txt  final_e2e_output_v6.txt  final_test_output.txt  jest.config.js  jest.setup.js  lint_output.txt  lint_output_final.txt  lint_output_nocache.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_final.txt  test_output_v4.txt
hunter-debug/: started.json  (+1 more)
(+537 files in other folders)
