[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greek-sub-publisher"
version = "0.1.0"
description = "Local-first tooling for Greek subtitles and vertical video prep."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.5",
  "faster-whisper>=1.0.3",
  "streamlit>=1.38.0",
  "requests>=2.31.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0"
]

[tool.setuptools.packages.find]
where = ["src"]
