[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greek-sub-publisher"
version = "0.1.0"
description = "Local-first tooling for Greek subtitles and vertical video prep."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.5",
  "faster-whisper>=1.0.3",
  "requests>=2.31.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=5.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "types-requests",
  "types-ujson",
]
apple-silicon = [
  # Install from source for CoreML: WHISPER_COREML=1 pip install git+https://github.com/absadiki/pywhispercpp
  "pywhispercpp>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*", "google.*", "google_auth_oauthlib.*", "pywhispercpp.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "backend/tests/*",
    "backend/venv/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
